backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trixify-service
spec:
  selector:
    app: trixify
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
